--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #04bf71;
+  background: #bcc4c0;
   text-align: center;
   font-family: "Open Sans", sans-serif;
 }
@@ -54,8 +54,9 @@ input {
 }
 
 .done {
-  background: rgba(236, 10, 10, 0.616);
+  background: rgba(63, 236, 10, 0.616);
   color: azure;
+  text-decoration: line-through;
 }
 
 .listItems ul {
